[project]
name = "arcticsecurity"
version = "0.1.0"
authors = [
    {name = "Arctic Security", email = "pypi@arcticsecurity.com"},
]
description = "Library to access Arctic Security APIs"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Home = "https://github.com/arcticsecurity/arcticsecurity-python"
Issues = "https://github.com/arcticsecurity/arcticsecurity-python/issues"

[build-system]
requires = ["uv_build >= 0.9.9, <0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
fixable = ["I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
invalid-method-override = "ignore"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
    "mypy>=1.19.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.6",
    "tzdata",
    "ty",
    "yamllint",
]
